Bug 58129 - FILESAVE as ppt and pps (MSO97): rejected by MSO with warning message
Summary: FILESAVE as ppt and pps (MSO97): rejected by MSO with warning message
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: high critical
Assignee: David Tardon
URL:
Whiteboard: bibisected40 target:4.0.0.0.beta3 tar...
Keywords: regression
: 58097 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-12-11 10:45 UTC by Yifan Jiang
Modified: 2013-01-22 21:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
How mso complains. (17.84 KB, image/png)
2012-12-11 10:45 UTC, Yifan Jiang
Details
Bibisect output (2.72 KB, text/plain)
2012-12-16 11:18 UTC, Werner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2012-12-11 10:45:03 UTC
Created attachment 71326 [details]
How mso complains.

Platform: SLED 11 sp2 x86_64, perhaps all
Build:    recent master fbfda39d26da6747edb3a4c6d593be7e6b2b0f1

Steps
-----

    1. Launch Libreoffice Impress

    2. Create something

    3. Save it as ppt file

    4. Open the ppt file in MSO2010

Problem
-------

    - MSO complains everytime trying to open them. Basically it will populate a
    "detect a problem with a file..." (see screenshot) warning bar, and
    automatically force to a protected view. I didn't check much of the
    content quality, but obviouly some of them have got to be clutter.

    I tried to convert a dozen of odp documents to ppt and none of them is
    immune to this problem.

    - It is also a regression against 3.6 build  :(

Raise it as critical, I actually prefer to promote it as a blocker if the problem is confirmed in other platforms (Windows, Mac?)
Comment 1 Joel Madero 2012-12-11 17:36:18 UTC
Confirmed, marking as NEW, agree that this is a critical bug, not sure about blocker as the data is still all there and you can still save as in MSO but it is definitely high priority.
Comment 2 chefchenko 2012-12-15 08:34:58 UTC
this bug is a duplicate of Bug 58097
Comment 3 Rainer Bielefeld Retired 2012-12-16 07:36:12 UTC
*** Bug 58097 has been marked as a duplicate of this bug. ***
Comment 4 Rainer Bielefeld Retired 2012-12-16 07:58:24 UTC
[Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta1   -  GERMAN UI / German Locale  [Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)]"  {tinderbox: @6, pull time 2012-12-06} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch

and still [Reproducible] with unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI / German Locale  [Build ID: 76c921de48ee41716b5a500b892945c704da73c)]"  {tinderbox: Win-x86@6, pull time 2012-12-10 09:43:47} on German WIN7 Home Premium (64bit) with own separate User Profile 

Steps how to reproduce:
1. Launch LibO and open new Presentation from LibO start center
2. Click into slide at an empty place, select all and delete all so 
   that presentation is completely empty
3. Save as .ppt (or .pps, does not matter) and close
4. Try to open document with MSO, document will be rejected with warning as
   reported.

.PPTX (MSO2007 and OOXML) not affected.

Already  [Reproducible] with Server-installation of Master "3.7.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

Was still ok with Server installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 475d0c5-829fc92-39746e8-206648e-fefd87]" (2012-02-14)

So I think bibisecting might help?

@Werner
Can you help with a bibisect?
Comment 5 Werner 2012-12-16 11:18:32 UTC
Created attachment 71577 [details]
Bibisect output

last good version is Version 3.7.0.0.alpha0+ (Build ID: c82183)
first bad version is Version 3.7.0.0.alpha0+ (Build ID: 188526)
Comment 6 Rainer Bielefeld Retired 2012-12-16 12:45:23 UTC
@Werner:
Thx. for quick reaction, great work!

@Thorsten:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf
Comment 7 David Tardon 2012-12-19 08:14:08 UTC
Regression from f5ec08d4d8ff64cbae83e47ac2159eb3a546bc79, caused by misplaced rename of Count() to size().

->Werner: Thank you very much for the bisecting!
Comment 8 Not Assigned 2012-12-19 08:25:21 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00edfcff58032cc7f90026bd3ce92402e3c7e769&g=libreoffice-4-0

fdo#58129 fix ppt export of paragraphs


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-19 08:25:40 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2395a3fb74a90cc3166dbe4722250376eff58547

fdo#58129 fix ppt export of paragraphs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.