fdo#58129 fix ppt export of paragraphs

Change-Id: I8784c7a84e7f1d3173b6e134377e9232906d77ba
(cherry picked from commit 2395a3fb74a90cc3166dbe4722250376eff58547)

Signed-off-by: David Tardon <dtardon@redhat.com>